--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,14 @@
         tools:targetApi="31">
         <activity
             android:name=".results"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat.NoActionBar.FullScreen"
+            />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:theme="@style/Theme.AppCompat.NoActionBar.FullScreen"
+            android:exported="true"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
